compiler/fir/analysis-tests/testData/resolve/extraCheckers/unused/invokeOverload2.kt
fun foo() {
    val <!UNUSED_VARIABLE!>x<!> = fun(s: String) {}

    fun nested() {
        val x = fun(i: Int) {}

        x(10)
    }
}
